--- a/BUILD_TOPOLOGY.toml
+++ b/BUILD_TOPOLOGY.toml
@@ -210,6 +210,12 @@ type = "generic"
 artifact_group_deps = ["third-party-sysdeps"]
 source_sets = ["compilers"]
 
+[artifact_groups.compiler-extras]
+description = "AMD LLVM Extra Projects (beyond core toolchain)"
+type = "generic"
+artifact_group_deps = ["compiler"]
+source_sets = ["compilers"]
+
 [artifact_groups.debug-tools]
 description = "ROCm debug tools"
 type = "generic"
@@ -414,6 +420,13 @@ feature_group = "ALL"
 artifact_group = "compiler"
 type = "target-neutral"
 artifact_deps = ["amd-llvm"]  # Built on top of amd-llvm
+feature_group = "ALL"
+
+[artifacts.amd-llvm-extras]
+artifact_group = "compiler"
+type = "target-neutral"
+artifact_deps = ["amd-llvm"]  # Built on top of amd-llvm
+feature_name = "COMPILER_EXTRAS"
 feature_group = "ALL"
 
 # --- Runtime Artifacts ---
