--- a/core/artifact-core-rocrtst.toml
+++ b/core/artifact-core-rocrtst.toml
@@ -3,5 +3,11 @@
 [components.dev."core/rocrtst/stage"]
 [components.doc."core/rocrtst/stage"]
 [components.lib."core/rocrtst/stage"]
+exclude = [
+    "lib/rocrtst/lib/libhwloc.so*",
+]
 [components.run."core/rocrtst/stage"]
 [components.test."core/rocrtst/stage"]
+exclude = [
+    "lib/rocrtst/lib/libhwloc.so*",
+]
