--- a/comm-libs/CMakeLists.txt
+++ b/comm-libs/CMakeLists.txt
@@ -102,3 +102,67 @@ if(THEROCK_ENABLE_RCCL AND THEROCK_SANITIZER STREQUAL "")
       ${_rccl_subproject_names}
   )
 endif(THEROCK_ENABLE_RCCL AND THEROCK_SANITIZER STREQUAL "")
+
+if(THEROCK_ENABLE_ROCSHMEM)
+  # Most libraries need to depend on the profiler, but is conditionally only used
+  # on Posix.
+  set(optional_profiler_deps)
+  if(THEROCK_FLAG_INCLUDE_PROFILER)
+    list(APPEND optional_profiler_deps roctracer rocprofiler-sdk)
+  endif()
+  ##############################################################################
+  # rocSHMEM
+  ##############################################################################
+  set(_rocshmem_subproject_names)
+  therock_cmake_subproject_declare(rocshmem
+    EXTERNAL_SOURCE_DIR "${THEROCK_ROCM_SYSTEMS_SOURCE_DIR}/projects/rocshmem"
+    BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/rocshmem"
+    # High latency LTO link of a single library.
+    BACKGROUND_BUILD
+    CMAKE_ARGS
+      -DCMAKE_VERBOSE_MAKEFILE=OFF
+      -DUSE_RO=ON
+      -DUSE_IPC=ON
+      -DUSE_GDA=ON
+      -DGDA_MLX5=ON
+      -DGDA_BNXT=ON
+      -DGDA_IONIC=ON
+      -DUSE_EXTERNAL_MPI=OFF
+      -DCMAKE_POSITION_INDEPENDENT_CODE=ON
+      -DHIP_PLATFORM=amd
+      -DROCM_PATH=
+      -DROCM_DIR=
+      "-DEXPLICIT_ROCM_VERSION=${ROCM_MAJOR_VERSION}.${ROCM_MINOR_VERSION}.${ROCM_PATCH_VERSION}"
+      -DBUILD_TESTS=${THEROCK_BUILD_TESTING}
+    CMAKE_INCLUDES
+      therock_explicit_finders.cmake
+    COMPILER_TOOLCHAIN
+      amd-hip
+    BUILD_DEPS
+      rocm-cmake
+      therock-fmt
+      therock-googletest
+    RUNTIME_DEPS
+      hip-clr
+  )
+  therock_cmake_subproject_glob_c_sources(rocshmem
+    SUBDIRS
+      src
+  )
+  therock_cmake_subproject_provide_package(rocshmem ROCSHMEM lib/cmake/rocshmem)
+  therock_cmake_subproject_activate(rocshmem)
+  list(APPEND _rocshmem_subproject_names rocshmem)
+
+  therock_provide_artifact(rocshmem
+    DESCRIPTOR artifact-rocshmem.toml
+    COMPONENTS
+      dbg
+      dev
+      doc
+      lib
+      run
+      test
+    SUBPROJECT_DEPS
+      ${_rocshmem_subproject_names}
+  )
+endif(THEROCK_ENABLE_ROCSHMEM)
