--- a/.github/workflows/test_component.yml
+++ b/.github/workflows/test_component.yml
@@ -113,6 +113,7 @@ jobs:
           SHARD_INDEX: ${{ matrix.shard }}
           TOTAL_SHARDS: ${{ fromJSON(inputs.component).total_shards }}
           TEST_TYPE: ${{ fromJSON(inputs.component).test_type }}
+          TEST_COMPONENT: ${{ fromJSON(inputs.component).job_name }}
         run: |
           ${{ fromJSON(inputs.component).test_script }}
 
