Revert "Enabling RCCL Build"
This reverts commit b77e0ed4a88dfe0bd72749bc079d4cf5cef57343.

--- a/comm-libs/CMakeLists.txt
+++ b/comm-libs/CMakeLists.txt
@@ -96,4 +96,4 @@ if(THEROCK_ENABLE_RCCL)
     SUBPROJECT_DEPS
       ${_rccl_subproject_names}
   )
-endif(THEROCK_ENABLE_RCCL AND (THEROCK_SANITIZER STREQUAL "" OR THEROCK_SANITIZER STREQUAL "ASAN"))
+endif(THEROCK_ENABLE_RCCL)
