[ci]: Adding TSAN builds
Incorporated review comments - 2

--- a/.github/workflows/build_portable_linux_artifacts.yml
+++ b/.github/workflows/build_portable_linux_artifacts.yml
@@ -67,6 +67,8 @@ jobs:
       id-token: write
     container:
       image: ghcr.io/rocm/therock_build_manylinux_x86_64@sha256:db2b63f938941dde2abc80b734e64b45b9995a282896d513a0f3525d4591d6cb
+      # --cap-add=SYS_PTRACE : to enable ptrace insided the build container for tsan builds
+      # --security-opt seccomp=unconfined : to disable the system call filtering for tsan builds
       options: -v /runner/config:/home/awsconfig/ --cap-add=SYS_PTRACE --security-opt seccomp=unconfined
     env:
       AWS_SHARED_CREDENTIALS_FILE: /home/awsconfig/credentials.ini
