--- a/.github/workflows/build_linux_jax_wheels.yml
+++ b/.github/workflows/build_linux_jax_wheels.yml
@@ -96,7 +96,7 @@ on:
       ref:
         description: rocm-jax repository ref/branch to check out
         type: string
-        default: rocm-jaxlib-v0.8.0
+        default: rocm-jaxlib-v0.8.0-fixdevtar
 
 permissions:
   id-token: write
@@ -108,7 +108,7 @@ jobs:
   build_jax_wheels:
     strategy:
       matrix:
-        jax_ref: [rocm-jaxlib-v0.8.0]
+        jax_ref: [rocm-jaxlib-v0.8.0-fixdevtar]
     name: Build Linux JAX Wheels | ${{ inputs.amdgpu_family }} | Python ${{ inputs.python_version }}
     runs-on: ${{ github.repository_owner == 'ROCm' && 'azure-linux-scale-rocm' || 'ubuntu-24.04' }}
     env:
