--- a/.github/workflows/build_linux_jax_wheels.yml
+++ b/.github/workflows/build_linux_jax_wheels.yml
@@ -42,6 +42,9 @@ on:
       ref:
         description: "Branch, tag or SHA to checkout. Defaults to the reference or SHA that triggered the workflow."
         type: string
+      jax_ref:
+        description: "rocm-jax repository ref/branch to check out"
+        type: string
   workflow_dispatch:
     inputs:
       amdgpu_family:
@@ -94,9 +97,13 @@ on:
         type: string
         default: "https://rocm.devreleases.amd.com/v2-staging"
       ref:
+        description: TheRock repository ref/branch to check out
+        type: string
+        default: ""
+      jax_ref:
         description: rocm-jax repository ref/branch to check out
         type: string
-        default: rocm-jaxlib-v0.8.0-fixdevtar
+        default: "rocm-jaxlib-v0.8.0-fixdevtar"
 
 permissions:
   id-token: write
@@ -117,6 +124,7 @@ jobs:
     outputs:
       cp_version: ${{ env.cp_version }}
       jax_version: ${{ steps.extract_jax_version.outputs.jax_version }}
+      jax_ref: ${{ matrix.jax_ref }}
     steps:
       - name: Checkout TheRock
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
@@ -232,7 +240,7 @@ jobs:
       python_version: ${{ inputs.python_version }}
       repository: ${{ inputs.repository || github.repository }}
       ref: ${{ inputs.ref || '' }}
-      jax_ref: ${{ inputs.jax_ref }}
+      jax_ref: ${{ needs.build_jax_wheels.outputs.jax_ref }}
       test_runs_on: ${{ needs.generate_target_to_run.outputs.test_runs_on }}
 
   upload_jax_wheels:
