--- a/.github/workflows/build_portable_linux_pytorch_wheels.yml
+++ b/.github/workflows/build_portable_linux_pytorch_wheels.yml
@@ -116,6 +116,9 @@ jobs:
     name: Build | ${{ inputs.amdgpu_family }} | py ${{ inputs.python_version }} | torch ${{ inputs.pytorch_git_ref }}
     runs-on: ${{ github.repository_owner == 'ROCm' && 'azure-linux-scale-rocm' || 'ubuntu-24.04' }}
     container:
+      # TODO: Update to pinned SHA after Dockerfile changes merge to main.
+      # This branch-specific image includes sccache. Once merged, the main
+      # image will be rebuilt and a follow-up PR should pin the new SHA.
       image: ghcr.io/rocm/therock_build_manylinux_x86_64:users-subodh-dubey-amd-ccache-pytorch
     env:
       OUTPUT_DIR: ${{ github.workspace }}/output
