--- a/.github/workflows/build_portable_linux_pytorch_wheels.yml
+++ b/.github/workflows/build_portable_linux_pytorch_wheels.yml
@@ -116,10 +116,8 @@ jobs:
     name: Build | ${{ inputs.amdgpu_family }} | py ${{ inputs.python_version }} | torch ${{ inputs.pytorch_git_ref }}
     runs-on: ${{ github.repository_owner == 'ROCm' && 'azure-linux-scale-rocm' || 'ubuntu-24.04' }}
     container:
-      # TODO: Update to pinned SHA after Dockerfile changes merge to main.
-      # This branch-specific image includes sccache. Once merged, the main
-      # image will be rebuilt and a follow-up PR should pin the new SHA.
-      image: ghcr.io/rocm/therock_build_manylinux_x86_64:users-subodh-dubey-amd-ccache-pytorch
+      # TODO(follow-up PR): Update SHA to main image after Dockerfile changes merge
+      image: ghcr.io/rocm/therock_build_manylinux_x86_64@sha256:6e7d49caefd37cdda93487bafde973a683f372d517ca7e5bbb4232ebdcfaca30
     env:
       OUTPUT_DIR: ${{ github.workspace }}/output
       PACKAGE_DIST_DIR: ${{ github.workspace }}/output/packages/dist
