--- a/.github/workflows/test_linux_jax_wheels.yml
+++ b/.github/workflows/test_linux_jax_wheels.yml
@@ -143,7 +143,7 @@ jobs:
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
           repository: rocm/jax
-          ref: ${{ inputs.jax_ref || 'rocm-jaxlib-v0.8.0' }}
+          ref: rocm-jaxlib-v0.8.0
           path: jax/jax_tests
 
       - name: Set up Python
