--- a/core/artifact-core-ocl.toml
+++ b/core/artifact-core-ocl.toml
@@ -3,11 +3,12 @@
 [components.dev."core/ocl-clr/stage"]
 [components.doc."core/ocl-clr/stage"]
 [components.lib."core/ocl-clr/stage"]
-include = [
-  "share/opencl/**",
-]
 [components.run."core/ocl-clr/stage"]
 include = [
   "bin/**",
+]
+[components.test."core/ocl-clr/stage"]
+include = [
   "tests/**",
+  "share/opencl/**",
 ]
