--- a/.github/workflows/test_sanity_check.yml
+++ b/.github/workflows/test_sanity_check.yml
@@ -51,7 +51,7 @@ jobs:
         --group-add video
         --device /dev/kfd
         --device /dev/dri
-        --group-add 110
+        --group-add ${{ vars.OSSCI_GPU_GROUP_ID }}
         --cap-add SYS_MODULE
         -v /lib/modules:/lib/modules
         --ulimit memlock=-1:-1
