--- a/.github/workflows/test_component.yml
+++ b/.github/workflows/test_component.yml
@@ -40,7 +40,7 @@ jobs:
         --group-add video
         --device /dev/kfd
         --device /dev/dri
-        --group-add ${{ vars.OSSCI_GPU_GROUP_ID }}
+        --group-add 992
         --ulimit memlock=-1:-1
         --security-opt seccomp=unconfined
         --env-file /etc/podinfo/gha-gpu-isolation-settings
