--- a/.github/workflows/test_linux_jax_wheels.yml
+++ b/.github/workflows/test_linux_jax_wheels.yml
@@ -83,7 +83,7 @@ on:
         description: rocm-jax repository ref/branch to check out
         required: false
         type: string
-        default: "rocm-jaxlib-v0.8.0-fixdevtar"
+        default: "rocm-jaxlib-v0.8.0"
       test_runs_on:
         description: Runner label to use. The selected runner should have a GPU supported by amdgpu_family
         required: true
@@ -137,13 +137,13 @@ jobs:
         with:
           path: jax
           repository: rocm/rocm-jax
-          ref: ${{ inputs.jax_ref || 'rocm-jaxlib-v0.8.0-fixdevtar' }}
+          ref: ${{ inputs.jax_ref }}
 
       - name: Checkout JAX extended tests repo
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
           repository: rocm/jax
-          ref: rocm-jaxlib-v0.8.0
+          ref: ${{ inputs.jax_ref }}
           path: jax/jax_tests
 
       - name: Set up Python
