--- a/.github/workflows/native_linux_packages_full_test.yml
+++ b/.github/workflows/native_linux_packages_full_test.yml
@@ -117,8 +117,8 @@ jobs:
       - name: Install System Prerequisites
         run: |
           echo "Installing prerequisites for ${{ inputs.native_package_type }} on container"
-          
-          if [ "${{ inputs.native_package_type }}" == "deb" ]; then
+
+          if [ "${{ inputs.native_package_type }}" = "deb" ]; then
             # Ubuntu/Debian prerequisites
             apt update
             apt install -y \
@@ -131,7 +131,8 @@ jobs:
               lsb-release
           else
             # RHEL/CentOS/AlmaLinux prerequisites
-            dnf install -y \
+            # Use --allowerasing to handle curl-minimal conflict on AlmaLinux 9
+            dnf install -y --allowerasing \
               python3 \
               python3-pip \
               wget \
@@ -151,8 +152,13 @@ jobs:
 
       - name: Install Python Dependencies
         run: |
-          pip3 install --break-system-packages pyelftools requests
-
+          if [ "${{ inputs.native_package_type }}" = "deb" ]; then
+            # Ubuntu/Debian: use --break-system-packages flag
+            pip3 install --break-system-packages pyelftools requests
+          else
+            # RHEL/CentOS/AlmaLinux: no --break-system-packages flag needed
+            pip3 install pyelftools requests
+          fi
       - name: Determine Build Date
         id: build-date
         run: |
@@ -181,7 +187,7 @@ jobs:
           echo "Install Prefix: ${{ env.INSTALL_PREFIX }}"
           echo "=========================================================================="
           echo ""
-          
+
           # Build command for package_full_test.py
           CMD="python3 /tmp/TheRock/build_tools/packaging/linux/package_full_test.py"
           CMD="$CMD --package-type ${{ inputs.native_package_type }}"
@@ -216,7 +222,7 @@ jobs:
             echo "ROCm installation directory not found: ${{ env.INSTALL_PREFIX }}"
             exit 1
           fi
-          
+
           # Check for key ROCm components
           echo ""
           echo "Checking for key ROCm components:"
@@ -227,7 +233,7 @@ jobs:
             "include/hip/hip_runtime.h"
             "lib/libamdhip64.so"
           )
-          
+
           all_found=true
           for comp in "${components[@]}"; do
             full_path="${{ env.INSTALL_PREFIX }}/${comp}"
@@ -238,7 +244,7 @@ jobs:
               all_found=false
             fi
           done
-          
+
           if [ "$all_found" = true ]; then
             echo ""
             echo "All key components found"
@@ -254,8 +260,8 @@ jobs:
           echo "=========================================================================="
           echo "FULL TEST REPORT"
           echo "=========================================================================="
-          
-          if [ "${{ steps.full-test.outcome }}" == "success" ]; then
+
+          if [ "${{ steps.full-test.outcome }}" = "success" ]; then
             echo "FULL INSTALLATION TEST PASSED"
             echo ""
             echo "Summary:"
@@ -273,5 +279,3 @@ jobs:
             exit 1
           fi
           echo "=========================================================================="
-
-
