--- a/.github/workflows/native_linux_packages_full_test.yml
+++ b/.github/workflows/native_linux_packages_full_test.yml
@@ -205,6 +205,7 @@ jobs:
 
       - name: Verify ROCm Installation
         if: always() && steps.full-test.outcome == 'success'
+        shell: bash
         run: |
           echo "=========================================================================="
           echo "VERIFYING ROCM INSTALLATION"
